<resources>
    <string name="app_name">Auxilio Energencial</string>
    <string name="cpf">Cpf</string>
    <string name="datanascimento">Data Nascimento</string>
    <string name="rendamensal">Renda Mensal</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_saque_beneficio">SaqueBeneficio</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="datapagamento">Data Pagamento</string>
    <string name="saldoreceber">Saldo Receber</string>
    <string name="Sair">Sair</string>
</resources>
